--- a/index.html
+++ b/index.html
@@ -167,9 +167,10 @@
         LINE
       </a>
 
-      <div class="footer">© 2025 Your Brand • ระบบอัตโนมัติ • ฝาก–ถอนรวดเร็ว • บริการ 24 ชม.</div>
+      <div class="footer">© 2025 s2klaos • ระบบอัตโนมัติ • ฝาก–ถอนรวดเร็ว • บริการ 24 ชม.</div>
     </div>
   </main>
 
 </body>
 </html>
+
